# aiolimiter

./: .deepsource.toml  .gitignore  .license_header.txt  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  Taskfile.yml  codecov.yml  dodo.py  pyproject.toml  tox.ini
.azure-pipelines/: ci.yml  deploy.yml  stage-deploy.yml  stage-lint.yml  stage-publish.yml  stage-test.yml
.dependabot/: config.yaml
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-approve.yml  ci-cd.yml  codeql-analysis.yml  codeql.yml  dependabot-auto-merge.yml
changelog.d/: 139.misc.md  206.bugfix.md  217.bugfix.md  288.misc  292.bugfix.md  313.misc.md  4.doc  46.bugfix  62.removal  655.misc.md  73.bugfix.md  85.feature  95.misc  towncrier_template.md
docs/: Makefile  conf.py  index.rst  make.bat
src/aiolimiter/: __init__.py  compat.py  leakybucket.py
tests/: __init__.py  test_aiolimiter.py
