[tool.poetry]
name = "aiolimiter"
version = "1.1.0"
description = "asyncio rate limiter, a leaky bucket implementation"
license = "MIT"
authors = ["Martijn Pieters <mj@zopatista.com>"]
readme = "README.md"
homepage = "https://github.com/mjpieters/aiolimiter"
repository = "https://github.com/mjpieters/aiolimiter"
documentation = "http://aiolimiter.readthedocs.org/en/stable/"
keywords = ["asyncio", "rate-limiting", "leaky-bucket"]
classifiers = [
	"Framework :: AsyncIO",
	"Intended Audience :: Developers",
]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"CI: Azure Pipelines" = "https://dev.azure.com/mjpieters/aiolimiter/_build"
"Coverage: codecov" = "https://codecov.io/github/aiolimiter/aiosignal"
"GitHub: issues" = "https://github.com/mjpieters/aiolimiter/issues"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = { version = ">=1.3,<5.0", python = "< 3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^5.0.3"
flake8-bugbear = "^23.1.20"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
tox = "^3.14.1"
pre-commit = "^2.9.2"
doit = "^0.34.0"
isort = "^5.2.1"
toml = "^0.10.0"
twine = "^4.0.0"
towncrier = "^22.8.0"

[tool.poetry.group.dev.dependencies.black]
version = "^23.1.0"
markers = "platform_python_implementation != 'PyPy'"

[tool.poetry.group.dev.dependencies.mypy]
version = "^1.1"
markers = "platform_python_implementation != 'PyPy'"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.2.0,<5.0.0"
aiohttp-theme = "^0.1.6"
sphinx-autodoc-typehints = "^1.10.3"
sphinxcontrib-spelling = ">=4.3,<8.0"
toml = "^0.10.0"

[tool.isort]
line_length = 88
known_third_party = ["pytest"]

[tool.towncrier]
directory = "changelog.d/"
template = "changelog.d/towncrier_template.md"
filename = "CHANGELOG.md"
package_dir = "src"
package = "aiolimiter"
title_format = "## {name} {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/mjpieters/aiolimiter/issues/{issue})"
start_string = "<!-- Towncrier release notes start -->\n"
underlines = ["", "", ""]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
